2011-05-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Replace the symbol `us-ascii' for a
	coding-system with `iso-safe', which is valid even on Emacs21.
	(twittering-ensure-ca-cert): use `iso-safe' instead of `us-ascii'
	as a coding-system for ASCII.
	(twittering-start-http-session-curl-https-p): likewise.
	(twittering-initialize-global-variables-if-necessary): likewise.

	* twittering-mode.el: Add some directories for Emacs21 to
	`load-path' even when byte-compiling the file on Emacs21.

	* twittering-mode.el: embed a timeline spec string such as
	"#HASHTAG" for `goto-spec' of a hashtag instead of a search
	timeline spec as an internal representation.
	(twittering-make-hashtag-timeline-spec-string-direct): new macro.
	(twittering-make-fontified-tweet-text): embed a timeline spec
	string such as "#HASHTAG" for `goto-spec' of a hashtag instead of
	a search timeline spec as an internal representation.

	* twittering-mode.el: Add `twittering-update-status' as a function.
	(twittering-update-status-function): update docstring.
	(twittering-update-status-from-pop-up-buffer): rename the argument
	`spec' `tweet-type-as-spec'.
	(twittering-update-status-from-minibuffer): likewise.
	(twittering-update-status): new function.
	(twittering-direct-message): call `twittering-update-status'
	instead of referring `twittering-update-status-function'.
	(twittering-reply-to-user): likewise.
	(twittering-organic-retweet): likewise.
	(twittering-enter): likewise.

	* twittering-mode.el: Edit skeletons can refer to the current
	timeline spec.
	(twittering-update-status-function): update the docstring to
	follow the additional argument CURRENT-SPEC.
	(twittering-edit-skeleton-alist): update the docstring.
	(twittering-edit-skeleton-insert-base): support the new argument
	CURRENT-SPEC.
	(twittering-edit-skeleton-insert): likewise.
	(twittering-edit-skeleton-inherit-hashtags): likewise.
	(twittering-edit-skeleton-inherit-mentions): likewise.